--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#9C27B0</color>
+    <color name="colorPrimaryDark">#6A1B9A</color>
+    <color name="colorAccent">#E22F84</color>
+    <color name="colorLight_green">#7ABA34</color>
+    <color name="ColorDark_green">#5B852D</color>
+    <color name="ColorLight_gray">#F2F2F2</color>
+    <color name="ColorPhoto_tint">#7f101010</color>
+    <color name="ColorWithe">#FFFF</color>
 </resources>
